<resources>
    <string name="app_name">Today-OOTD</string>
    <string name="facebook_app_id">873009302900995</string>
    <string name="fb_login_protocol_scheme">fb873009302900995</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">로그인</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="signup">회원가입</string>

    <!-- Bottom Navigation View -->
    <string name="menu_title_home">home</string>
    <string name="menu_title_upload">오머~?</string>
    <string name="menu_title_favorite">찜</string>
    <string name="menu_title_mypage">mypage</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>
    <string name="ootd">오늘\n머 입지?</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_brand">브랜드명을 입력해주세요</string>
    <string name="no_information">정보없음</string>
    <string name="today_weather">오늘 날씨</string>
    <string name="today_style">오늘 스타일</string>
    <string name="today_info">오늘 정보</string>
    <string name="outer">아우터</string>
    <string name="top">상의</string>
    <string name="bottom">바지/치마</string>
    <string name="shoes">신발</string>
    <string name="bag">가방</string>
    <string name="today_picture">오늘 사진</string>
    <string name="input_friend_name">검색할 친구 닉네임을 입력해주세요</string>

    <string-array name="planets_array">
        <item>스트릿</item>
        <item>아메카지</item>
        <item>캐주얼</item>
        <item>댄디</item>
        <item>걸리시</item>
        <item>하이틴</item>
        <item>로맨틱</item>
        <item>스포티</item>
        <item>레트로</item>
        <item>미니멀</item>
        <item>락시크</item>
    </string-array>
</resources>