<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upload.UploadActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_mypage" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="TextView"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="data"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="price"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/priceTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="price"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/thumbnailImageView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/round_border"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signPWtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/today_style"
                    android:textColor="#6799FF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/my_style"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/no_information"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/today_info"
                    android:textColor="#6799FF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/my_outerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/outer"
                    android:textColor="#6799FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/my_outer"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/no_information"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/my_topText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/top"
                    android:textColor="#6799FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/my_top"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/no_information"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/my_bottomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/bottom"
                    android:textColor="#6799FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/my_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/no_information"
                    android:text="" />

                <TextView
                    android:id="@+id/my_shoesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/shoes"
                    android:textColor="#6799FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/my_shoes"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/no_information"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/my_bagText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/bag"
                    android:textColor="#6799FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/my_bag"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/no_information"
                    android:text="" />

                <TextView
                    android:id="@+id/my_accText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="액세서리"
                    android:textColor="#6799FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/my_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/no_information"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginLeft="140dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    app:srcCompat="@drawable/ic_favoite_empty" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>